--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "vk-crypto-game",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
   "main": "crypto.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antonioBatonio/vk-crypto-game"
   },
   "author": "",
   "license": "ISC",
